--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start":"nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
